botón slider doble

--- a/administrator/language/es-ES/es-ES.com_sppagebuilder.ini
+++ b/administrator/language/es-ES/es-ES.com_sppagebuilder.ini
@@ -184,6 +184,28 @@ COM_SPPAGEBUILDER_GLOBAL_BUTTON_SHAPE_SQUARE="Cuadrado"
 COM_SPPAGEBUILDER_GLOBAL_BUTTON_SHAPE_ROUND="Redondo"
 COM_SPPAGEBUILDER_GLOBAL_BUTTON_ICON="Icono del botón"
 COM_SPPAGEBUILDER_GLOBAL_BUTTON_ICON_DESC="Elija un icono para el botón."
+COM_SPPAGEBUILDER_GLOBAL_BUTTON_2_TEXT="Texto del botón 2"
+COM_SPPAGEBUILDER_GLOBAL_BUTTON_2_TEXT_DESC="ingrese el texto del botón 2 aquí. Déjalo en blanco si el botón 2 no es requerido."
+COM_SPPAGEBUILDER_GLOBAL_BUTTON_2_URL="Enlace del botón 2"
+COM_SPPAGEBUILDER_GLOBAL_BUTTON_2_URL_DESC="La URL absoluta de la página a la que se vinculará."
+COM_SPPAGEBUILDER_GLOBAL_BUTTON_2_SIZE="Tamaño del botón 2"
+COM_SPPAGEBUILDER_GLOBAL_BUTTON_2_SIZE_DESC="Elija el tamaño del botón 2"
+COM_SPPAGEBUILDER_GLOBAL_BUTTON_2_SIZE_DEFAULT="Estándar"
+COM_SPPAGEBUILDER_GLOBAL_BUTTON_2_SIZE_LARGE="Grande"
+COM_SPPAGEBUILDER_GLOBAL_BUTTON_2_SIZE_SMALL="Pequeño"
+COM_SPPAGEBUILDER_GLOBAL_BUTTON_2_SIZE_XLARGE="Extra grande"
+COM_SPPAGEBUILDER_GLOBAL_BUTTON_2_SIZE_EXTRA_SAMLL="Extra pequeño"
+COM_SPPAGEBUILDER_GLOBAL_BUTTON_2_TYPE="Tipo de botón 2"
+COM_SPPAGEBUILDER_GLOBAL_BUTTON_2_TYPE_DESC="Escoge el tipo del botón 2"
+COM_SPPAGEBUILDER_GLOBAL_BUTTON_2_STYLE="Estilo del botón 2"
+COM_SPPAGEBUILDER_GLOBAL_BUTTON_2_STYLE_DESC="Elija un estilo de botón 2 de la lista."
+COM_SPPAGEBUILDER_GLOBAL_BUTTON_2_SHAPE="Forma del botón 2"
+COM_SPPAGEBUILDER_GLOBAL_BUTTON_2_SHAPE_DESC="Elija una forma de botón 2 de la lista."
+COM_SPPAGEBUILDER_GLOBAL_BUTTON_2_SHAPE_ROUNDED="Redondeado"
+COM_SPPAGEBUILDER_GLOBAL_BUTTON_2_SHAPE_SQUARE="Cuadrado"
+COM_SPPAGEBUILDER_GLOBAL_BUTTON_2_SHAPE_ROUND="Redondo"
+COM_SPPAGEBUILDER_GLOBAL_BUTTON_2_ICON="Icono del botón 2"
+COM_SPPAGEBUILDER_GLOBAL_BUTTON_2_ICON_DESC="Elija un icono para el botón 2."
 COM_SPPAGEBUILDER_ADDON_GLOBAL_TARGET="El atributo de destino para el vínculo"
 COM_SPPAGEBUILDER_GLOBAL_TARGET_DESC="Abrir el vínculo en la misma ventana o una de nueva"
 COM_SPPAGEBUILDER_GLOBAL_TARGET_SAME_WINDOW="En la misma ventana"
@@ -207,6 +229,25 @@ COM_SPPAGEBUILDER_GLOBAL_BUTTON_BACKGROUND_COLOR_HOVER="Color de fondo Hover par
 COM_SPPAGEBUILDER_GLOBAL_BUTTON_BACKGROUND_COLOR_HOVER_DESC="Definir un color de fondo para este botón cuando el ratón está encima."
 COM_SPPAGEBUILDER_GLOBAL_BUTTON_COLOR_HOVER="Color del Botón al pasar ratón encima"
 COM_SPPAGEBUILDER_GLOBAL_BUTTON_COLOR_HOVER_DESC="Definir un color de texto para este botón mientras el ratón está encima."
+COM_SPPAGEBUILDER_GLOBAL_BUTTON_2_BLOCK="Botón de ancho completo"
+COM_SPPAGEBUILDER_GLOBAL_BUTTON_2_BLOCK_DESC="¿Quieres usar el botón 2 de ancho completo?"
+COM_SPPAGEBUILDER_GLOBAL_BUTTON_2_ICON_POSITION="Posición del ícono en el botón 2"
+COM_SPPAGEBUILDER_GLOBAL_BUTTON_2_APPEARANCE="Apariencia del botón 2"
+COM_SPPAGEBUILDER_GLOBAL_BUTTON_2_APPEARANCE_DESC="Elija un aspecto adecuado de la lista."
+COM_SPPAGEBUILDER_GLOBAL_BUTTON_2_APPEARANCE_FLAT="Plano"
+COM_SPPAGEBUILDER_GLOBAL_BUTTON_2_APPEARANCE_OUTLINE="Contorno"
+COM_SPPAGEBUILDER_GLOBAL_BUTTON_2_APPEARANCE_3D="3D"
+COM_SPPAGEBUILDER_GLOBAL_BUTTON_2_FONT_STYLE="Estilo de fuente del botón 2"
+COM_SPPAGEBUILDER_GLOBAL_BUTTON_2_FONT_STYLE_DESC="Seleccione uno o más estilos para el texto del botón 2. El primer estilo se aplicará si se detectan selecciones inversas."
+COM_SPPAGEBUILDER_GLOBAL_BUTTON_2_LETTER_SPACING="Espacio entre letras del botón 2"
+COM_SPPAGEBUILDER_GLOBAL_BUTTON_2_BACKGROUND_COLOR="Color de fondo del botón 2"
+COM_SPPAGEBUILDER_GLOBAL_BUTTON_2_BACKGROUND_COLOR_DESC="Definir un color de fondo de este botón 2."
+COM_SPPAGEBUILDER_GLOBAL_BUTTON_2_COLOR="Color del botón 2"
+COM_SPPAGEBUILDER_GLOBAL_BUTTON_2_COLOR_DESC="Definir un color para este botón 2."
+COM_SPPAGEBUILDER_GLOBAL_BUTTON_2_BACKGROUND_COLOR_HOVER="Color de fondo Hover para el botón 2"
+COM_SPPAGEBUILDER_GLOBAL_BUTTON_2_BACKGROUND_COLOR_HOVER_DESC="Definir un color de fondo para este botón 2 cuando el ratón está encima."
+COM_SPPAGEBUILDER_GLOBAL_BUTTON_2_COLOR_HOVER="Color del Botón al pasar ratón encima"
+COM_SPPAGEBUILDER_GLOBAL_BUTTON_2_COLOR_HOVER_DESC="Definir un color de texto para este botón 2 mientras el ratón está encima."
 COM_SPPAGEBUILDER_ADDON_GLOBAL_TARGET_SAME_WINDOW="Misma ventana"
 COM_SPPAGEBUILDER_ADDON_GLOBAL_TARGET_NEW_WINDOW="Nueva ventana"
 COM_SPPAGEBUILDER_GLOBAL_MARGIN_TOP="Margen superior"
