--- a/language/es-ES/es-ES.mod_finder.ini
+++ b/language/es-ES/es-ES.mod_finder.ini
@@ -45,7 +45,7 @@ MOD_FINDER_FIELD_OPENSEARCH_LABEL="Autodetección de OpenSearch"
 MOD_FINDER_FIELD_OPENSEARCH_TEXT_DESCRIPTION="El texto mostrado cuando añada a su sitio como proveedor de búsquedas en los navegadores que lo soporten."
 MOD_FINDER_FIELD_OPENSEARCH_TEXT_LABEL="Título de OpenSearch"
 MOD_FINDER_SEARCHBUTTON_TEXT=""
-MOD_FINDER_SEARCH_BUTTON="Buscar"
+MOD_FINDER_SEARCH_BUTTON=""
 MOD_FINDER_SEARCH_VALUE="Buscar..."
 MOD_FINDER_SELECT_MENU_ITEMID="Seleccionar un elemento del menú"
 MOD_FINDER_XML_DESCRIPTION="Esto es un módulo de búsquedas inteligentes."
